--- a/src/basics/Makefile
+++ b/src/basics/Makefile
@@ -18,7 +18,8 @@ SRC			=	managemlx.c\
 				managewindow.c\
 				managewindowlist.c\
 				manageimage.c\
-				manageimagelist.c
+				manageimagelist.c\
+					imagedraw.c\
 
 OBJ			= $(subst .c,.o,$(SRC))
 
